# forgecut

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  package.yml
apps/forgecut_gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/forgecut_gui/src-tauri/capabilities/: default.json
apps/forgecut_gui/src-tauri/src/: lib.rs  main.rs  state.rs
apps/forgecut_gui/ui/: electron-builder.yml  index.html  package.json  tsconfig.json  vite.config.ts
apps/forgecut_gui/ui/electron/: main.ts  preload.ts  tsconfig.json
apps/forgecut_gui/ui/electron/backend/: exporter.ts  ipc.ts  media-derived.ts  media-probe.ts  media-protocol.ts  state.ts  timeline-ops.ts
apps/forgecut_gui/ui/electron/backend/__tests__/: exporter.test.ts  media-derived.test.ts  media-probe.test.ts  media-protocol.test.ts  timeline-commands.test.ts
apps/forgecut_gui/ui/electron/backend/commands/: autosave.ts  export.ts  media.ts  project.ts  timeline.ts  types.ts
apps/forgecut_gui/ui/electron/scripts/: dev.mjs  verify-startup.mjs
apps/forgecut_gui/ui/electron/shared/: ipc-contract.ts
apps/forgecut_gui/ui/src/: App.tsx  index.css
apps/forgecut_gui/ui/src/__tests__/: bridge.test.ts  preview.test.tsx  project-load.test.tsx  seek-controller.test.ts  theme.test.tsx  time-utils.test.ts  timeline-controls.test.tsx  timeline-thumbnails.test.tsx
apps/forgecut_gui/ui/src/components/: AssetBin.tsx  ExportDialog.tsx  Inspector.tsx  Preview.tsx  Timeline.tsx  TimelineClip.tsx
apps/forgecut_gui/ui/src/hooks/: useClipMedia.ts  usePlayback.ts  useTimelineInteractions.ts  useTimelineShortcuts.ts
apps/forgecut_gui/ui/src/lib/: bridge.ts
apps/forgecut_gui/ui/src/lib/preview/: seek-controller.ts  time-utils.ts  types.ts  video-element.ts
apps/forgecut_gui/ui/src/lib/timeline/: geometry.ts  items.ts
crates/forgecut_core/: Cargo.toml
crates/forgecut_core/src/: editing.rs  error.rs  history.rs  lib.rs  project.rs  snapping.rs  types.rs
crates/forgecut_preview/: Cargo.toml
crates/forgecut_preview/src/: mpv.rs
crates/forgecut_render/: Cargo.toml
crates/forgecut_render/src/: error.rs  lib.rs  probe.rs  proxy.rs  render.rs  thumbnails.rs  waveform.rs
