[package]
name = "forgecut_render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forgecut_core = { path = "../forgecut_core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
