[package]
name = "forgecut-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
forgecut_core = { path = "../../../crates/forgecut_core" }
forgecut_render = { path = "../../../crates/forgecut_render" }
tauri = { version = "2", features = [] }
tiny_http = "0.12"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
